modify dashboard message

--- a/config.org
+++ b/config.org
@@ -511,7 +511,7 @@ Emacs Dashboard is an extensible startup screen showing you recent files, bookma
     (setq initial-buffer-choice 'dashboard-open)
     (setq dashboard-set-heading-icons t)
     (setq dashboard-set-file-icons t)
-    (setq dashboard-banner-logo-title "My GNU Emacs!")
+    (setq dashboard-banner-logo-title "Reard's GNU Emacs!")
     (setq dashboard-startup-banner 'logo) ;; use standard emacs logo as banner
     (setq dashboard-center-content nil) ;; set to 't' for centered content
     (setq dashboard-items '((recents . 10)
