--- a/config.org
+++ b/config.org
@@ -5,7 +5,6 @@
 [[file:TomBombadil.jpg]]
 
 * Table of contents :toc:
-- [[#first-step][First step]]
 - [[#important-programs-to-load-first][Important programs to load first]]
   - [[#elpaca-package-manager][Elpaca Package Manager]]
 - [[#fonts][Fonts]]
@@ -25,7 +24,7 @@
 - [[#projects][Projects]]
 - [[#dashboard][Dashboard]]
 - [[#programming-languages-support][Programming languages support]]
-  - [[#c-mode][C# Mode]]
+  - [[#c-mode--php-mode][C# Mode + PHP Mode]]
   - [[#php-mode][PHP mode]]
   - [[#git-diffs-on-the-side][Git diffs on the side]]
   - [[#origami-mode-folding-code][origami-mode (folding code)]]
@@ -52,9 +51,6 @@
 - [[#pdf-support][PDF support]]
 - [[#reopen-most-recently-closed-file][Reopen most recently closed file]]
 - [[#beacon][Beacon]]
-
-* First step
-Copy all the dependencies from the emacs-29-deps folder into the Emacs installation binary folder. Needed for image inline display support on Windows.
 
 * Important programs to load first
 ** Elpaca Package Manager
@@ -535,7 +531,7 @@ Emacs has built-in programming language modes for Lisp, Scheme, DSSSL, Ada, ASM,
   (use-package lua-mode)
 #+end_src
 
-** C# Mode
+** C# Mode + PHP Mode
 #+begin_src emacs-lisp
   (use-package lsp-mode
     :commands lsp
@@ -543,7 +539,11 @@ Emacs has built-in programming language modes for Lisp, Scheme, DSSSL, Ada, ASM,
     :custom
     (lsp-headerline-breadcrumb-enable nil)
     (lsp-enable-snippet t)
-    (lsp-idle-delay 0.5))
+    (lsp-idle-delay 0.5)
+    :init
+    ; Start PHP mode as well
+    (setq lsp-intelephense-server-command
+          '("/home/reard/.nvm/versions/node/v24.13.0/bin/intelephense" "--stdio")))
 
   (use-package lsp-ui
     :after lsp-mode
@@ -592,28 +592,9 @@ Emacs has built-in programming language modes for Lisp, Scheme, DSSSL, Ada, ASM,
 ** PHP mode
 
 #+begin_src emacs-lisp
-(use-package lsp-mode
-  :ensure t
-  :commands lsp
-  :init
-  (setq lsp-keymap-prefix "C-c l") ;; optional keybindings
-  (setq lsp-intelephense-server-command
-        '("/home/reard/.nvm/versions/node/v24.13.0/bin/intelephense" "--stdio")))
-
 (use-package php-mode
   :ensure t
   :hook (php-mode . lsp)) ;; start lsp automatically when opening PHP files
-
-(use-package lsp-ui
-  :ensure t
-  :commands lsp-ui-mode) ;; optional UI features
-
-(use-package company
-  :ensure t
-  :hook (php-mode . company-mode)
-  :config
-  (setq company-minimum-prefix-length 1
-        company-idle-delay 0.0))
 
 (setq lsp-php-intelephense-files-associations ["*.php"])
 (setq lsp-php-intelephense-stubs ["apache" "bcmath" "bz2" "calendar" "Core" "curl" "date" "dom" "exif" "fileinfo" "filter" "ftp" "gd" "gettext" "hash" "iconv" "imap" "intl" "json" "ldap" "libxml" "mbstring" "mcrypt" "mysqli" "mysql" "openssl" "pcntl" "pcre" "PDO" "pdo_mysql" "Phar" "posix" "readline" "recode" "Reflection" "session" "SimpleXML" "soap" "sockets" "SPL" "sqlite3" "standard" "tokenizer" "xml" "xmlreader" "xmlrpc" "xmlwriter" "xsl" "zip" "zlib"])
@@ -1093,17 +1074,5 @@ Usage: /M-x recentf-open-files/
   :config
   (beacon-mode 1))
 #+end_src
-
-
-
-
-
-
-
-
-
-
-
-
 
 
