--- a/config.org
+++ b/config.org
@@ -26,7 +26,10 @@
 - [[#dashboard][Dashboard]]
 - [[#programming-languages-support][Programming languages support]]
   - [[#yasnippet][Yasnippet]]
-  - [[#c-mode--php-mode][C# Mode + PHP Mode]]
+  - [[#path-from-shell][PATH from shell]]
+  - [[#web-mode][web-mode]]
+  - [[#treesitter][Treesitter]]
+  - [[#c-mode--php-mode--vue-mode--react-mode][C# Mode + PHP Mode + Vue mode + React mode]]
   - [[#php-mode][PHP mode]]
   - [[#git-diffs-on-the-side][Git diffs on the side]]
   - [[#debugging-mode][Debugging mode]]
@@ -550,25 +553,137 @@ Emacs has built-in programming language modes for Lisp, Scheme, DSSSL, Ada, ASM,
   (yas-global-mode 1))  ;; enable yasnippet everywhere
 #+end_src
 
-** C# Mode + PHP Mode
-#+begin_src emacs-lisp
-  (use-package lsp-mode
-    :commands lsp
-    :hook ((csharp-mode . lsp))
-    :custom
-    (lsp-headerline-breadcrumb-enable nil)
-    (lsp-idle-delay 0.5)
-    :init
-    (setq lsp-enable-snippet t)
-    ; Start PHP mode as well
-    (setq lsp-intelephense-server-command
-          '("/home/reard/.nvm/versions/node/v24.13.0/bin/intelephense" "--stdio")))
+** PATH from shell
 
-  (use-package lsp-ui
-    :after lsp-mode
-    :custom
-    (lsp-ui-doc-enable t)
-    (lsp-ui-sideline-enable t))
+#+begin_src emacs-lisp
+(use-package exec-path-from-shell
+  :ensure t
+  :config
+  (exec-path-from-shell-initialize))
+#+end_src
+
+** web-mode
+
+#+begin_src emacs-lisp
+(use-package web-mode
+  :ensure t
+  :mode (("\\.html?\\'" . web-mode)
+         ("\\.twig\\'" . web-mode)
+         ("\\.blade\\.php\\'" . web-mode)
+         ("\\.jsx\\'" . web-mode)
+         ("\\.tsx\\'" . web-mode)
+         ("\\.vue\\'" . web-mode)
+         ("\\.erb\\'" . web-mode))
+  :custom
+  (web-mode-enable-auto-quoting nil)
+  (web-mode-enable-auto-pairing t)
+  (web-mode-enable-css-colorization t)
+  (web-mode-enable-current-element-highlight t)
+  (web-mode-enable-current-column-highlight nil)
+  (web-mode-markup-indent-offset 2)
+  (web-mode-css-indent-offset 2)
+  (web-mode-code-indent-offset 2)
+  :hook
+  (web-mode . lsp-deferred))
+#+end_src
+
+** Treesitter
+
+#+begin_src emacs-lisp
+(use-package treesit
+      :mode (("\\.tsx\\'" . tsx-ts-mode)
+             ("\\.js\\'"  . typescript-ts-mode)
+             ("\\.mjs\\'" . typescript-ts-mode)
+             ("\\.mts\\'" . typescript-ts-mode)
+             ("\\.cjs\\'" . typescript-ts-mode)
+             ("\\.ts\\'"  . typescript-ts-mode)
+             ("\\.jsx\\'" . tsx-ts-mode)
+             ("\\.json\\'" .  json-ts-mode)
+             ("\\.Dockerfile\\'" . dockerfile-ts-mode)
+             )
+      :preface
+      (defun os/setup-install-grammars ()
+        "Install Tree-sitter grammars if they are absent."
+        (interactive)
+        (dolist (grammar
+                 '((css . ("https://github.com/tree-sitter/tree-sitter-css" "v0.20.0"))
+                   (html . ("https://github.com/tree-sitter/tree-sitter-html" "v0.20.1"))
+                   (javascript . ("https://github.com/tree-sitter/tree-sitter-javascript" "v0.21.2" "src"))
+                   (json . ("https://github.com/tree-sitter/tree-sitter-json" "v0.20.2"))
+                   (python . ("https://github.com/tree-sitter/tree-sitter-python" "v0.20.4"))
+                   (go "https://github.com/tree-sitter/tree-sitter-go" "v0.20.0")
+                   (markdown "https://github.com/ikatyang/tree-sitter-markdown")
+                   (make "https://github.com/alemuller/tree-sitter-make")
+                   (cmake "https://github.com/uyha/tree-sitter-cmake")
+                   (toml "https://github.com/tree-sitter/tree-sitter-toml")
+                   (tsx . ("https://github.com/tree-sitter/tree-sitter-typescript" "v0.20.3" "tsx/src"))
+                   (typescript . ("https://github.com/tree-sitter/tree-sitter-typescript" "v0.20.3" "typescript/src"))
+                   (yaml . ("https://github.com/ikatyang/tree-sitter-yaml" "v0.5.0"))))
+          (add-to-list 'treesit-language-source-alist grammar)
+          ;; Only install `grammar' if we don't already have it
+          ;; installed. However, if you want to *update* a grammar then
+          ;; this obviously prevents that from happening.
+          (unless (treesit-language-available-p (car grammar))
+            (treesit-install-language-grammar (car grammar)))))
+
+      ;; Optional, but recommended. Tree-sitter enabled major modes are
+      ;; distinct from their ordinary counterparts.
+      ;;
+      ;; You can remap major modes with `major-mode-remap-alist'. Note
+      ;; that this does *not* extend to hooks! Make sure you migrate them
+      ;; also
+      (dolist (mapping
+               '((python-mode . python-ts-mode)
+                 (css-mode . css-ts-mode)
+                 (typescript-mode . typescript-ts-mode)
+                 (js-mode . typescript-ts-mode)
+                 (js2-mode . typescript-ts-mode)
+                 (bash-mode . bash-ts-mode)
+                 (css-mode . css-ts-mode)
+                 (json-mode . json-ts-mode)
+                 (js-json-mode . json-ts-mode)))
+        (add-to-list 'major-mode-remap-alist mapping))
+      :config
+      (os/setup-install-grammars))
+#+end_src
+
+** C# Mode + PHP Mode + Vue mode + React mode
+#+begin_src emacs-lisp
+;; ------------------------------
+;; LSP Mode
+;; ------------------------------
+(use-package lsp-mode
+  :ensure t
+  :commands (lsp lsp-deferred)
+  :hook ((csharp-mode . lsp)
+         (php-mode . lsp-deferred)
+         (js-mode . lsp-deferred)
+         (vue-mode . lsp-deferred)
+         (tsx-ts-mode . lsp-deferred)
+         (js-ts-mode . lsp-deferred))
+  :custom
+  (lsp-headerline-breadcrumb-enable nil)
+  (lsp-idle-delay 0.5)
+  (lsp-completion-provider :capf)
+  :init
+  (setq lsp-enable-snippet t
+        lsp-intelephense-server-command
+        '("/home/reard/.nvm/versions/node/v24.13.0/bin/intelephense" "--stdio")))
+
+;; Vue mode
+(use-package vue-mode
+  :ensure t
+  :mode "\\.vue\\'"
+  :hook (vue-mode . lsp-deferred))
+
+(with-eval-after-load 'lsp-mode
+  ;; Register Volar or VLS for Vue files only
+  (lsp-register-client
+   (make-lsp-client
+    :new-connection (lsp-stdio-connection "vls") ;; or "vue-language-server" for Volar
+    :major-modes '(vue-mode)
+    :priority 2
+    :server-id 'vls)))
 
   (setq lsp-auto-guess-root t)
   (setq lsp-prefer-flymake nil)
@@ -601,8 +716,8 @@ Emacs has built-in programming language modes for Lisp, Scheme, DSSSL, Ada, ASM,
   (setq electric-indent-mode nil)
 
   (add-hook 'csharp-mode-hook
-          (lambda ()
-            (setq c-basic-offset 4)))
+	  (lambda ()
+	    (setq c-basic-offset 4)))
 
   (setq lsp-idle-delay 0.1)
   (setq lsp-diagnostics-provider :flymake)
