--- a/config.org
+++ b/config.org
@@ -960,30 +960,28 @@ An RSS newsfeed reader for Emacs. Move through the articles with 'j/k'. Move thr
 The following settings are simple modes that are enabled (or disabled) so that Emacs functions more like you would expect a proper editor/IDE to function.
 
 #+begin_src emacs-lisp
-  (delete-selection-mode 1)    ;; You can select text and delete it by typing.
-  ;(electric-indent-mode -1)    ;; Turn off the weird indenting that Emacs does by default.
-  (electric-pair-mode 1)       ;; Turns on automatic parens pairing
-  (global-auto-revert-mode t)  ;; Automatically show changes if the file has changed
-  (global-display-line-numbers-mode 1) ;; Display line numbers
-  (global-visual-line-mode t)  ;; Enable truncated lines
-  ;(menu-bar-mode -1)           ;; Disable the menu bar 
-  ;(scroll-bar-mode -1)         ;; Disable the scroll bar
-  ;(tool-bar-mode -1)           ;; Disable the tool bar
-  ;(setq org-edit-src-content-indentation 0) ;; Set src block automatic indent to 0 instead of 2.
-  (setq display-time-default-load-average nil)
+(delete-selection-mode 1)    ;; You can select text and delete it by typing.
+(electric-indent-mode -1)    ;; Turn off the weird indenting that Emacs does by default.
+(electric-pair-mode 1)       ;; Turns on automatic parens pairing
+(global-auto-revert-mode t)  ;; Automatically show changes if the file has changed
+(global-display-line-numbers-mode 1) ;; Display line numbers
+;(setq display-line-numbers 'relative)
+(global-visual-line-mode t)  ;; Enable truncated lines
+(setq org-edit-src-content-indentation 0) ;; Set src block automatic indent to 0 instead of 2.
+(setq display-time-default-load-average nil)
 #+end_src
 
 #+begin_src emacs-lisp
-  ; Open an empty new tab when creating new tabs.
-  (defun open-new-tab-with-neotree ()
-    "Open a new tab and display Neotree at the E: drive."
-    (interactive)
-    (tab-new)  ;; Open a new tab
-    (switch-to-buffer "*scratch*")
-    (neotree-dir "/home/reard/data"))  ;; Show Neotree with E: drive
+; Open an empty new tab when creating new tabs.
+(defun open-new-tab-with-neotree ()
+  "Open a new tab and display Neotree at the E: drive."
+  (interactive)
+  (tab-new)  ;; Open a new tab
+  (switch-to-buffer "*scratch*")
+  (neotree-dir "/home/reard/data"))  ;; Show Neotree with E: drive
 
-  ;; Rebind C-x t 2 to open the new tab with Neotree
-  (global-set-key (kbd "C-x t 2") 'open-new-tab-with-neotree)
+;; Rebind C-x t 2 to open the new tab with Neotree
+(global-set-key (kbd "C-x t 2") 'open-new-tab-with-neotree)
 #+end_src
 
 * Touch typing
