--- a/config.org
+++ b/config.org
@@ -1076,6 +1076,7 @@ Org-tempo is a package that allows for '<s' followed by TAB to expand to a begin
 #+begin_src emacs-lisp
 (global-set-key (kbd "C-c f") #'counsel-rg)
 (global-set-key (kbd "C-c p f") #'projectile-find-file)
+(global-set-key (kbd "C-c r") #'lsp-find-references)
 #+end_src
 
 * vterm
