--- a/config.org
+++ b/config.org
@@ -1084,6 +1084,10 @@ Org-tempo is a package that allows for '<s' followed by TAB to expand to a begin
 
 #+begin_src emacs-lisp
 (setq lsp-enable-symbol-highlighting t)
+
+(custom-set-faces
+ '(lsp-face-highlight-read ((t (:background "#3e4451"))))
+ '(lsp-face-highlight-write ((t (:background "#5c6370")))))
 #+end_src
 
 * vterm
